--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -7,5 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # - name: in ra cau lenh helo
-      - run: echo bao c.an ba tien ca do 
+      # - run: echo bao c.an ba tien ca do 
+      - name: Checkout 
+        uses: actions/checkout@v3
+      - name: setup node
+        uses: actions/setup-node@v3
+        with:
+         node-version: 14
+      - name: install node_module
+        run: npm i
+      - run: npm run lint
+      
   
